@@ -27,16 +27,16 @@ DEB_CONFIGURE_EXTRA_FLAGS := --datadir=/usr/share/squid3 \
 		--enable-underscores \
 		--enable-icap-client \
 		--enable-follow-x-forwarded-for \
-		--enable-auth \
-		--enable-basic-auth-helpers="LDAP,MSNT,NCSA,PAM,SASL,SMB,YP,DB,POP3,getpwnam,squid_radius_auth,multi-domain-NTLM" \
-		--enable-ntlm-auth-helpers="smb_lm," \
-		--enable-digest-auth-helpers="ldap,password" \
-		--enable-negotiate-auth-helpers="squid_kerb_auth" \
+		--enable-auth-basic="DB,getpwnam,LDAP,MSNT,MSNT-multi-domain,NCSA,NIS,PAM,POP3,RADIUS,SASL,SMB" \
+		--enable-auth-digest="ldap,password" \
+		--enable-auth-negotiate="kerberos" \
+		--enable-auth-ntlm="smb_lm" \
 		--enable-external-acl-helpers="ip_user,ldap_group,session,unix_group,wbinfo_group" \
 		--enable-arp-acl \
+		--enable-url-rewrite-helpers="fake" \
+		--enable-eui \
 		--enable-esi \
 		--enable-zph-qos \
-		--enable-wccpv2 \
 		--enable-ecap \
 		--disable-translation \
 		--with-logdir=/var/log/squid3 \
@@ -85,6 +85,7 @@ install/squid3::
 	install -m 750 -o proxy -g proxy -d debian/squid3/var/log/squid3
 	install -m 750 -o proxy -g proxy -d debian/squid3/var/spool/squid3
 	install -m 755 -g root -d $(INSTALLDIR)/usr/share/man/man1
+	mv $(INSTALLDIR)/usr/bin/purge $(INSTALLDIR)/usr/bin/squid-purge
 
 clean::
 	# nothing to do
